@@ -7,6 +7,10 @@ Development Version
   F10 - connect to database
   F11 - disconnect (and revoke assignment)
 
+Bugs fixed
+* Fix a regression in statement splitter (#7).
+
+
 Version 0.4.0 (2015-03-02)
 ==========================
 
